# blockchain-iot-custody-sim

./: LICENSE  PRD_Blockchain_IoT_Simulation.docx  PRD_Blockchain_IoT_Simulation.txt  README.md
blockchain-iot-custody-sim/: LICENSE  pyproject.toml
blockchain-iot-custody-sim/Archive/paper/: main.tex
blockchain-iot-custody-sim/Archive/results/: raw_data.csv  tables.tex
blockchain-iot-custody-sim/Archive/results-quick/: latency_by_config.csv  raw_data.csv
blockchain-iot-custody-sim/config/: default.yaml  paper_reproduction.yaml
blockchain-iot-custody-sim/paper/: references.bib
blockchain-iot-custody-sim/results/: latency_by_config.csv  tables.tex  tdr_by_attack.csv
blockchain-iot-custody-sim/results-quick/: gas_comparison.csv  tdr_by_attack.csv
blockchain-iot-custody-sim/src/blockchain_iot_custody_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
blockchain-iot-custody-sim/src/custody_sim/: contract_verifier.py  metrics.py  models.py  simulation.py
blockchain-iot-custody-sim/tests/: test_crypto.py  test_output.py
src/custody_sim/: __init__.py  adversary.py  cli.py  crypto_engine.py  iot_seal.py  metrics.py  topology.py
tests/: test_simulation.py  test_verification.py
