[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blockchain-iot-custody-sim"
version = "1.0.0"
description = "Discrete-event simulation framework for a three-tier blockchain-IoT custody chain"
readme = "README.md"
authors = [
  { name = "Naushik Beladiya", email = "nbeladiya1@toromail.csudh.edu" }
]
requires-python = ">=3.9"
dependencies = [
    "simpy>=4.0",
    "cryptography>=41.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "click>=8.0",
    "pyyaml>=6.0",
    "tabulate>=0.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]

[project.scripts]
custody-sim = "custody_sim.cli:cli"
